--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - ${SERVER_PORT}:${SERVER_PORT}
     environment:
-      SERVER_ADDRESS: ${SERVER_PORT}
+      SERVER_PORT: ${SERVER_PORT}
       MQTT_ADDRESS: ${MQTT_ADDRESS}
       MQTT_PORT: ${MQTT_PORT}
       MQTT_USERNAME: ${MQTT_USERNAME}
